@@ -60,7 +60,7 @@ public class InstrumentsTests {
   @Test
   public void testBoolean() {
     boolean b = false;
-    long booleanSize = Instruments.sizeOf(new Boolean(b)) - Instruments.SIZE_OBJECT;
+    long booleanSize = Instruments.sizeOf(Boolean.valueOf(b)) - Instruments.SIZE_OBJECT;
     Assert.assertEquals(Instruments.SIZE_BOOLEAN, booleanSize);
   }
 
@@ -70,7 +70,7 @@ public class InstrumentsTests {
   @Test
   public void testByte() {
     byte b = 0x00;
-    long byteSize = Instruments.sizeOf(new Byte(b)) - Instruments.SIZE_OBJECT;
+    long byteSize = Instruments.sizeOf(Byte.valueOf(b)) - Instruments.SIZE_OBJECT;
     Assert.assertEquals(Instruments.SIZE_BYTE, byteSize);
   }
 
@@ -80,7 +80,7 @@ public class InstrumentsTests {
   @Test
   public void testChar() {
     char c = '\0';
-    long charSize = Instruments.sizeOf(new Character(c)) - Instruments.SIZE_OBJECT;
+    long charSize = Instruments.sizeOf(Character.valueOf(c)) - Instruments.SIZE_OBJECT;
     Assert.assertEquals(Instruments.SIZE_CHAR, charSize);
   }
 
@@ -90,7 +90,7 @@ public class InstrumentsTests {
   @Test
   public void testShort() {
     short s = 0;
-    long shortSize = Instruments.sizeOf(new Short(s)) - Instruments.SIZE_OBJECT;
+    long shortSize = Instruments.sizeOf(Short.valueOf(s)) - Instruments.SIZE_OBJECT;
     Assert.assertEquals(Instruments.SIZE_SHORT, shortSize);
   }
 
@@ -100,7 +100,7 @@ public class InstrumentsTests {
   @Test
   public void testInt() {
     int i = 0;
-    long intSize = Instruments.sizeOf(new Integer(i)) - Instruments.SIZE_OBJECT;
+    long intSize = Instruments.sizeOf(Integer.valueOf(i)) - Instruments.SIZE_OBJECT;
     Assert.assertEquals(Instruments.SIZE_INT, intSize);
   }
 
@@ -110,7 +110,7 @@ public class InstrumentsTests {
   @Test
   public void testLong() {
     long l = 0;
-    long longSize = Instruments.sizeOf(new Long(l)) - Instruments.SIZE_OBJECT;
+    long longSize = Instruments.sizeOf(Long.valueOf(l)) - Instruments.SIZE_OBJECT;
     Assert.assertEquals(Instruments.SIZE_LONG, longSize);
   }
 
@@ -120,7 +120,7 @@ public class InstrumentsTests {
   @Test
   public void testFloat() {
     float f = 0.0f;
-    long floatSize = Instruments.sizeOf(new Float(f)) - Instruments.SIZE_OBJECT;
+    long floatSize = Instruments.sizeOf(Float.valueOf(f)) - Instruments.SIZE_OBJECT;
     Assert.assertEquals(Instruments.SIZE_FLOAT, floatSize);
   }
 
@@ -130,7 +130,7 @@ public class InstrumentsTests {
   @Test
   public void testDouble() {
     double d = 0.0;
-    long doubleSize = Instruments.sizeOf(new Double(d)) - Instruments.SIZE_OBJECT;
+    long doubleSize = Instruments.sizeOf(Double.valueOf(d)) - Instruments.SIZE_OBJECT;
     Assert.assertEquals(Instruments.SIZE_DOUBLE, doubleSize);
   }
 
